--- a/index.html
+++ b/index.html
@@ -9,5 +9,9 @@
 </head>
 <body>
     <h1>Hola mundo aqui modificado</h1>
+
+    <form action="#" method="get">
+        <input type="boton" value="Enviar" name="" id="">
+    </form>
 </body>
 </html>
