--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <h1>Hola mundo aqui modificado</h1>
 
     <form action="#" method="get">
+        <input type="text" name="FirstName" id="FirstName">
         <input type="boton" value="Enviar" name="" id="">
     </form>
 </body>
