--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 
     <form action="#" method="get">
         <input type="text" name="FirstName" id="FirstName">
+        <input type="text" name="LastName" id="LastName">
         <input type="boton" value="Enviar" name="" id="">
     </form>
 </body>
