--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <form action="#" method="get">
         <input type="text" name="FirstName" id="FirstName">
         <input type="text" name="LastName" id="LastName">
+        <input type="number" name="age" id="age">
         <input type="boton" value="Enviar" name="" id="">
     </form>
 </body>
