--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <h1>Hola mundo aqui modificado</h1>
 
     <form action="#" method="get">
-        <input type="text" name="FirstName" id="FirstName">
+        <input type="number" name="FirstName" id="FirstName">
         <input type="text" name="LastName" id="LastName">
         <input type="number" name="age" id="age">
         <input type="boton" value="Enviar" name="" id="">
